--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -1,20 +1,20 @@
 h1 a {
-    color: #FCA205;
-    font-family: 'Lobster';
+    color: #0000CD;
+    font-family: 'PT Sans';
 }
 
 body {
-    padding-left: 15px;
+    padding-left: 12px;
 }
 .page-header {
-    background-color: #ff9400;
+    background-color: #0000CD;
     margin-top: 0;
     padding: 20px 20px 20px 40px;
 }
 
 .page-header h1, .page-header h1 a, .page-header h1 a:visited, .page-header h1 a:active {
     color: #ffffff;
-    font-size: 36pt;
+    font-size: 32pt;
     text-decoration: none;
 }
 
@@ -23,11 +23,11 @@ body {
 }
 
 h1, h2, h3, h4 {
-    font-family: 'Lobster', cursive;
+    font-family: 'Arimo';
 }
 
 .date {
-    color: #828282;
+    color: #0000CD;
 }
 
 .save {
@@ -39,7 +39,7 @@ h1, h2, h3, h4 {
 }
 
 .top-menu, .top-menu:hover, .top-menu:visited {
-    color: #ffffff;
+    color: #0000CD ;
     float: right;
     font-size: 26pt;
     margin-right: 20px;
@@ -50,5 +50,5 @@ h1, h2, h3, h4 {
 }
 
 .post h1 a, .post h1 a:visited {
-    color: #000000;
+    color: #0000CD;
 }
