--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -1,5 +1,5 @@
 h1 a {
-    color: #0000CD;
+    color: #2226cd;
     font-family: 'PT Sans';
 }
 
@@ -7,13 +7,13 @@ body {
     padding-left: 12px;
 }
 .page-header {
-    background-color: #0000FF;
+    background-color: #87ff73;
     margin-top: 0;
     padding: 20px 20px 20px 40px;
 }
 
 .page-header h1, .page-header h1 a, .page-header h1 a:visited, .page-header h1 a:active {
-    color: #FFFAFA;
+    color: #f9ffe2;
     font-size: 32pt;
     text-decoration: none;
 }
